--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   go_router: ^17.0.0
   desktop_drop: ^0.5.0
   archive: ^3.4.9
+  google_mobile_ads: ^5.1.0
 
 dev_dependencies:
   flutter_test:
